# IMC-FL

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DATASET.md  LITERATURE.md  PIPELINE.md
scripts/: add_panel_labels_s6.py  analyze_roi_hybrid.py  apply_wendy1_relabel.py  assemble_paper_figures.py  batch_process.py  batch_process_S.py  cd14_nonmac_investigation.py  cd14_validation.py  cellular_neighborhoods.py  check_s_panel_clusters.py  check_s_panel_other.py  cluster_cells.py  cluster_heatmap.py  combine_results.py  compare_missed_cells.py  compartment_figures.py  compute_marker_qc_stats.py  cross_panel_compartment_overlap.py  cross_panel_concordance.py  cross_panel_figure.py  cross_panel_transfer.py  cross_tma_global.py  crossref_nuclei_cellpose.py  explore_s100a9_biology.py  ezh2_b_cell_near_macrophages.py  ezh2_b_cell_proliferation.py  ezh2_barplot_figure.py  ezh2_barplot_horizontal.py  ezh2_barplot_v2.py  ezh2_bcell_markers.py  ezh2_bcl2_neighbors.py  ezh2_bcl2_zone_macrophages.py  ezh2_boxplot_grid.py  ezh2_cd14_crosscorrelation.py  ezh2_composition_interactions.py  ezh2_comprehensive_figure.py  ezh2_features.py  ezh2_tcell_near_mac_zone.py  ezh2_tcell_status.py  ezh2_wendy_followup.py  (+155 more)
scripts/cayuga/: debug_cellpose.sh  deploy.sh  setup_env.sh  submit_all_tmas.sh  submit_batch.sh  submit_batch_S_cpu.sh  submit_batch_cpu.sh  submit_combine.sh  submit_combine_S.sh  submit_cross_tma.sh  submit_cross_tma_s_hires_v3.sh  submit_cross_tma_t_hires_v4.sh  submit_retry.sh  (+11 more)
src/: __init__.py  clinical_linkage.py  data_loader.py  segmentation.py  visualization.py
