[project]
name = "imc-fl"
version = "0.1.0"
description = "Hyperion IMC analysis for Follicular Lymphoma"
requires-python = ">=3.11"
dependencies = [
    # Core
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",

    # Image processing
    "scikit-image>=0.21",
    "tifffile>=2023.4",

    # Single-cell analysis
    "scanpy>=1.9",
    "anndata>=0.9",
    "squidpy>=1.3",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "napari[all]>=0.4.18",

    # Utilities
    "tqdm>=4.65",
    "joblib>=1.3",

    # Jupyter
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
